# EchosMonitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.claude/agents/: code-reviewer.md  qt-concurrency-auditor.md  test-guardian.md
.claude/skills/echos-rest-api/: SKILL.md
.claude/skills/hvsr-array/: SKILL.md
.claude/skills/miniseed-sds/: SKILL.md
.claude/skills/qt-worker-threading/: SKILL.md
.claude/skills/seismic-dsp/: SKILL.md
.github/workflows/: ci.yml  release.yml
config/: default.yaml
docs/: AUDIT.md  MANUAL.md  MANUAL_TESTS.md  POSTMORTEMS.md
packaging/: echosmonitor.spec  entry.py  make_icons.py
packaging/icons/: EchosMonitor.icns
packaging/linux/: build_appimage.sh
packaging/macos/: build_dmg.sh
packaging/rthooks/: pyi_rth_obspy_version.py
packaging/windows/: echosmonitor.iss
scripts/: build.ps1  build.sh  e2e_field_check.py  profile_500hz.py
src/echosmonitor/: __init__.py  __main__.py
src/echosmonitor/config/: __init__.py  credentials.py  default.yaml  loader.py  schema.py
src/echosmonitor/core/: archive_browser_loader.py  archive_detail_loader.py  archive_export_worker.py  archive_reindex_worker.py  archive_window_loader.py  collisions.py  config_diff.py  config_store.py  deconvolution_worker.py  discovery.py  dsp_router.py  echos_api.py  echos_device_worker.py  echos_status.py  exceptions.py  firstrun.py  hvsr.py  hvsr_array.py  hvsr_compute.py  hvsr_engine.py  info.py  info_worker.py  map_tiles.py  models.py  positions.py  psd_worker.py  response.py  seedlink_worker.py  session.py  spectrogram_router.py  streaming_engine.py
src/echosmonitor/dsp/: chain.py  factory.py  psd.py  spectrogram.py  stages.py
src/echosmonitor/gui/: __init__.py  main_window.py  qsettings_util.py  resources.py  theme.py
src/echosmonitor/gui/dialogs/: __init__.py  chain_editor_dialog.py  device_dialog.py  discovery_dialog.py  echos_tabs.py  first_run_wizard.py  new_session_dialog.py  settings_dialog.py  shortcuts_dialog.py
src/echosmonitor/gui/widgets/: __init__.py  archive_tab.py  (+17 more)
src/echosmonitor/storage/: __init__.py  archive_reader.py  dao.py  db.py  exports.py  gap_detector.py  hvsr_report.py  log_export.py  mseed_writer.py  reindex.py  sds.py  sessions.py
src/echosmonitor/utils/: logging.py
src/seedlink_dashboard/: __init__.py  __main__.py
src/seedlink_dashboard/ai/: __init__.py  base.py  domain.py  state_store.py
src/seedlink_dashboard/config/: __init__.py  loader.py  schema.py
src/seedlink_dashboard/core/: __init__.py  ai_engine.py  archive_detail_loader.py  archive_window_loader.py  collisions.py  config_diff.py  config_store.py  deconvolution_worker.py  dsp_router.py  exceptions.py  firstrun.py  hvsr.py  hvsr_engine.py  info.py  info_worker.py  models.py  psd_worker.py  response.py  ring_buffer.py  seedlink_worker.py  spectrogram_router.py  streaming_engine.py
src/seedlink_dashboard/dsp/: __init__.py  chain.py  factory.py  nlnm.py  stages.py
src/seedlink_dashboard/gui/: main_window.py
src/seedlink_dashboard/storage/: archive_reader.py  dao.py  db.py  event_persister.py  gap_detector.py  hvsr_report.py  mseed_writer.py  sds.py
src/seedlink_dashboard/utils/: __init__.py  docs.py  logging.py
tests/: conftest.py  test_cli_smoke.py  test_versioning.py
tests/config/: test_credentials.py  test_docs_yaml_contract.py  test_loader.py  test_schema_archive.py  test_schema_echos.py
tests/core/: echos_fake.py  fakes.py  test_archive_browser_loader.py  test_archive_detail_loader.py  test_archive_export_worker.py  test_archive_reindex_worker.py  test_archive_window_loader.py  test_collisions.py  test_config_diff.py  test_config_store.py  test_deconvolution_worker.py  test_detrend_linear_warning.py  test_discovery.py  test_echos_api.py  test_echos_device_worker.py  test_echos_status.py  test_engine_detections.py  test_engine_session_lifecycle.py  test_engine_sessions.py  test_firstrun_detection.py  test_high_rate_load.py  test_hvsr.py  test_hvsr_archive.py  test_hvsr_array.py  test_hvsr_compute.py  test_hvsr_engine.py  test_info_client.py  test_info_worker.py  test_map_tiles.py  test_models.py  test_positions.py  test_protocol_rejection.py  test_psd_worker.py  test_response.py  test_response_prefilt.py  test_ring_buffer.py  test_seedlink_worker.py  test_seedlink_worker_timeout.py  test_session.py  test_spectrogram_router.py  (+5 more)
tests/dsp/: test_chain.py  test_factory.py  test_nlnm.py  test_psd.py  test_spectrogram.py  test_stages.py
tests/gui/: test_archive_handoff.py  test_archive_hvsr_e2e.py  test_archive_measure.py  test_archive_tab_browser.py  test_archive_tab_reindex.py  test_archive_tab_view.py  test_chain_editor_dialog.py  test_detection_detail.py  test_detection_detail_archive.py  test_detection_detail_units.py  test_detection_markers.py  test_detection_table.py  test_device_dialog.py  test_device_dialog_echos.py  test_device_panel_archive.py  test_device_panel_columns.py  test_device_panel_diagnostics.py  test_device_panel_doubleclick.py  test_device_panel_echos.py  test_device_panel_protocol.py  test_discovery_dialog.py  test_dock_detach.py  test_first_run_no_trigger.py  test_first_run_wizard.py  test_first_run_wizard_integration.py  test_focus_mode.py  test_hvsr_array_widget.py  test_hvsr_widget.py  test_layout_defaults.py  test_live_stack.py  test_live_stack_multi.py  test_live_stack_spectrogram.py  test_live_tabs.py  test_log_axis.py  test_log_widget.py  test_main_window.py  test_main_window_poll_backoff.py  test_main_window_stationxml.py  test_map_widget.py  test_menubar.py  (+11 more)
tests/storage/: test_archive_extent_real_writer.py  test_archive_queries.py  test_archive_reader.py  test_cross_session_durability.py  test_dao.py  test_db.py  test_detections_dao.py  test_exports.py  test_gap_detector.py  test_hvsr_array_report.py  test_hvsr_report.py  test_log_export.py  test_mseed_writer.py  test_mseed_writer_threaded.py  test_pipeline_e2e.py  test_reindex.py  test_sds.py  test_sds_device_namespace.py  test_session_stationxml.py  test_sessions_discovery.py
tests/utils/: test_docs.py  test_logging.py
(+27 files in other folders)
