[project]
name = "seedlink-dashboard"
version = "0.1.0"
description = "Professional GUI for real-time SeedLink seismic monitoring with AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
    "PySide6>=6.7",
    "qasync>=0.27",
    "pyqtgraph>=0.13",
    "obspy>=1.4",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "platformdirs>=4.2",
    # HVSR (Nakamura H/V spectral ratio) analysis tab. hvsrpy owns the
    # H/V physics, SESAME reliability/clarity criteria, Konno-Ohmachi
    # smoothing and Cox-2020 window rejection (we never re-implement).
    # A core dependency (not an optional extra): the HVSR tab is always
    # available. It pulls matplotlib transitively, which is used ONLY for
    # the offline PDF report (storage/hvsr_report.py) — live plotting
    # stays on pyqtgraph, so the "no matplotlib for live" stack rule holds.
    "hvsrpy>=2.0",
    # hvsrpy 2.1.0's postprocessing module does `from IPython.display
    # import display` at top level (imported transitively by its
    # __init__), but does NOT declare IPython as a dependency — so merely
    # `import hvsrpy` fails without it. Pin it here until upstream guards
    # that import. We never use hvsrpy's own plotting (we render with
    # pyqtgraph live / matplotlib for the report), only its physics.
    "ipython>=8.0",
]

[project.optional-dependencies]
ai = ["seisbench>=0.8", "torch>=2.2"]
remote = ["boto3>=1.34", "paramiko>=3.4"]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "types-PyYAML",
]

[project.scripts]
seedlink-dashboard = "seedlink_dashboard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seedlink_dashboard"]

[tool.hatch.build.targets.wheel.force-include]
"src/seedlink_dashboard/config/default.yaml" = "seedlink_dashboard/config/default.yaml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["qasync"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["obspy", "obspy.*", "pyqtgraph", "pyqtgraph.*", "scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Optional 'ai' extra — no py.typed / stubs shipped. Imported lazily inside
# ai/agents/seisbench_picker.py so the app runs without these installed.
module = ["seisbench", "seisbench.*", "torch", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# hvsrpy ships no py.typed / stubs. Imported lazily inside core/hvsr.py so
# the boundary stays the only place hvsrpy types appear.
module = ["hvsrpy", "hvsrpy.*", "matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
qt_api = "pyside6"
# Absolute wall-time compute-throughput bounds (e.g. the inline-DSP
# preview budget, the Welch-PSD budget) pass in isolation but flake
# under parallel suite load on a busy CI box. They are tagged `perf`
# and excluded from the default gate; run them deliberately with
#   uv run pytest -m perf
# A bare `-m perf` on the command line overrides this default
# expression. Note: this does NOT cover the stop()/timeout
# interruptibility tests — those verify a correctness contract
# (CLAUDE.md rule 7) with generous slack and stay in the default gate.
#
# The `ai` marker tags tests that require the optional `ai` extra
# (seisbench + torch): the scientific phase-picker acceptance test and
# archive-inference. The app — and the whole default gate — runs without
# torch installed (the torch-free fake-agent path proves the
# abstraction), so `ai` is excluded from the default gate alongside
# `perf`. Run the real-model tests with `uv run pytest -m ai` after
# `uv sync --extra ai`.
addopts = "-m 'not perf and not ai'"
markers = [
    "perf: absolute wall-time compute-throughput bound; load-sensitive, excluded from the default gate (run with -m perf)",
    "ai: requires the optional 'ai' extra (seisbench + torch); excluded from the default gate (run with -m ai)",
]
